<resources>
    <string name="app_name">Russian Roulette</string>
    <string name="UUID">dbb8e380-460e-414c-943a-aa109c7c541b</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="russian_roulette">Russian Roulette</string>
    <string name="digital_version">Digital Version</string>
    <string name="playing">Playing...</string>
    <string name="i_m_ready">I\'m Ready!</string>
    <string name="select_a_host">Select a host:</string>
    <string name="no_bt_dialog_msg">The device appears NOT to have a Bluetooth adapter! The game will only be playable as a single player game!</string>
    <string name="waiting_for_others">Waiting for other players...</string>
    <string name="players">Players:</string>
    <string name="get_ready">Get Ready!</string>
    <string name="click">Click!</string>
    <string name="another_round">Another Round!</string>
</resources>
