<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.PlayingActivityServer"
    android:background="@drawable/flag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/ac_playing_title_tv"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/get_ready" />

        <TextView
            style="@style/PlayersListHeadingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/players"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/ac_playing_players_lw"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/ac_playing_ready_btn"
            style="@style/BigBtnStyle"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/i_m_ready"/>

        <Button
            android:id="@+id/ac_playing_another_btn"
            style="@style/BigBtnStyle"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:text="@string/another_round"/>

        <ImageView
            android:id="@+id/ac_playing_guy_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:src="@drawable/bwguya"/>

    </LinearLayout>

</LinearLayout>